# nerv

./: .gitignore  7c230130.html  AGENTS.md  Cargo.toml  Makefile  PLAN-MODE.md  README.md  REFACTOR.md  TODO-SYMBOLS.md  TODO.md  llama-gguf.toml  pi-session-2026-04-05T15-10-30-618Z_cb7e2bcc-d57b-4d83-9738-b3d388618410.html  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
benches/: bootstrap.rs  chat_writer.rs  highlight.rs  index.rs  json_encoding.rs  output_filter.rs  render.rs  sse_parsing.rs  startup.rs  tools.rs
docs/: PROVIDERS.md  auth.md  cancellation.md  compaction.md  context.md  debugging.md  design.md  execution-loop.md  local-models.md  permissions.md  session-tree.md  tools.md
eval/: AGENTS.md  run-interactive.py  run.py
eval/interactive-tasks/plan-mode-todo-app/: task.json
eval/tasks/add-caching/: task.json
eval/tasks/add-cli-flag/: task.json
eval/tasks/code-exploration/: task.json
eval/tasks/concurrent-buffer/: task.json
eval/tasks/event-system/: task.json
eval/tasks/extract-constants/: task.json
eval/tasks/fix-exception-handling/: task.json
eval/tasks/fix-multiple-bugs/: task.json
eval/tasks/fix-off-by-one/: task.json
eval/tasks/implement-from-tests/: task.json
eval/tasks/known-file-bug-hunt/: task.json
eval/tasks/mass-rename/: task.json
eval/tasks/oracle-grid/: task.json
eval/tasks/parse-csv-bug/: task.json
eval/tasks/refactor-extract-function/: task.json
eval/tasks/trace-cancellation/: task.json
eval/tasks/trace-tool-execution/: setup.sh  task.json
patches/: ureq-3.3.0-native-tls-no-default.patch
prompts/: claude-haiku-4-5.md
scripts/: batch-wt  compaction-stats.py  parse-jsonl-session.py
skills/: commit.md
src/: bootstrap.rs  cli.rs  errors.rs  export.rs  http.rs  lib.rs  log.rs  main.rs  str.rs  worktree.rs
src/agent/: agent.rs  anthropic.rs  codex.rs  convert.rs  mod.rs  openai_compat.rs  provider.rs  transform.rs  types.rs
src/compaction/: mod.rs  summarize.rs
src/core/: agent_session.rs  auth.rs  compaction_controller.rs  config.rs  local_models.rs  mod.rs  model_registry.rs  notifications.rs  permissions.rs  resource_loader.rs  retry.rs  session_runner.rs  skills.rs  system_prompt.rs  tool_registry.rs
src/export/: template.css  template.html  template.js
src/index/: codemap.rs  mod.rs  references.rs
src/interactive/: btw_overlay.rs  btw_panel.rs  chat_writer.rs  display.rs  event_loop.rs  footer.rs  fullscreen_picker.rs  layout.rs  mod.rs  model_picker.rs  plan_interview.rs  session_picker.rs  statusbar.rs  theme.rs  tree_selector.rs
src/session/: manager.rs  mod.rs  types.rs
src/tools/: bash.rs  codemap.rs  diff.rs  edit.rs  epsh.rs  file_mutation_queue.rs  find.rs  grep.rs  ls.rs  memory.rs  mod.rs  read.rs  symbols.rs  truncate.rs  write.rs
src/tools/output_filter/: ansi.rs  dedup.rs  go.rs  json.rs  mod.rs  python.rs  (+2 more)
src/tui/: highlight.rs  keys.rs  mod.rs  stdin_buffer.rs  terminal.rs  tui.rs  utils.rs
tests/: agent.rs  agent_loop.rs  btw.rs  compaction.rs  config.rs  editor.rs  highlight.rs  infra.rs  integration.rs  memory.rs  plan_mode.rs  session.rs  session_task_panic.rs  system_prompt.rs  tool_allocs.rs  tools.rs  tui.rs
tests/agent/: agent_loop.rs  convert.rs  plan_mode.rs  retry.rs
tests/helpers/: mod.rs
tests/infra/: jsonc.rs  memory.rs  skills.rs  system_prompt.rs
tests/session/: compaction.rs  manager.rs
tests/tui/: chat_writer.rs  editor.rs  highlight.rs  keys.rs  terminal.rs
(+90 files in other folders)
