[package]
name = "nerv"
version = "0.1.1"
edition = "2024"

[dependencies]
ureq = { version = "3", features = ["json", "native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
crossbeam-channel = "0.5"
signal-hook = "0.3"
pulldown-cmark = "0.12"
unicode-segmentation = "1"
unicode-width = "0.2"
libc = "0.2"
sqlite = "0.36"
sha2 = "0.10"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
lexopt = "0.3.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "render"
harness = false

[[bench]]
name = "json_encoding"
harness = false

[[bench]]
name = "tools"
harness = false

[[bench]]
name = "sse_parsing"
harness = false

[[bench]]
name = "highlight"
harness = false

[[bench]]
name = "chat_writer"
harness = false

[[bench]]
name = "index"
harness = false

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
